syntax = "proto3";

package v1;

import "google/protobuf/wrappers.proto";

option java_outer_classname = "ModelProto";
option java_package = "com.tencent.polaris.client.pb";

message Location {
  google.protobuf.StringValue region = 1;
  google.protobuf.StringValue zone = 2;
  google.protobuf.StringValue campus = 3;
}

message MatchString {

  enum ValueType {
    TEXT = 0;
    PARAMETER = 1;
    VARIABLE = 2;
  }
  Operation type = 1;
  google.protobuf.StringValue value = 2;
  ValueType value_type = 3;
}

message MatchArgument {
  // label type for gateway request
  enum Type {
    // custom arguments
    CUSTOM = 0;
    // method, match the http post/get/put/delete or grpc method
    METHOD = 1;
    // header, match the http header, dubbo attachment, grpc header
    HEADER = 2;
    // query, match the http query, dubbo argument
    QUERY = 3;
    // caller service
    CALLER_SERVICE = 4;
    // caller host ip
    CALLER_IP = 5;
    // HTTP URL Path
    PATH = 6;
  }
  Type type = 1;
  // header key or query key
  string key = 2;
  // @Deprecated: header value or query value, only for compatible
  // use operation and values instead
  MatchString value = 3;
  // compare operation
  Operation operation = 4;
  // compare values
  repeated string values = 5;

}

enum Operation {
  // Equivalent match
  EXACT = 0;
  // Regular match
  REGEX = 1;
  // Not equals match
  NOT_EQUALS = 2;
  // Include match
  IN = 3;
  // Not include match
  NOT_IN = 4;
}